--- a/_includes/_social.njk
+++ b/_includes/_social.njk
@@ -4,6 +4,6 @@
 	href="{{ service.url }}"
 	target="_blank" rel="me"
 	aria-label="{{ service.name }}"
-	style="--color: {{ service.color }}"><i class="bi bi-{{ service.icon }}"></i></a>
+	style="--color: {{ service.color }}"><i class="fa-brands fa-{{ service.icon }}"></i></a>
 {%- endif -%}
 {% endfor %}
