--- a/assets/icons.css
+++ b/assets/icons.css
@@ -1,37 +1,30 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+@import url("https://kit.fontawesome.com/040e756b7e.css");
 
 :root {
-	--icon-arrow-left-short: "\F12C";
-	--icon-arrow-right-short: "\F135";
-	--icon-arrow-left-circle: "\F12A";
-	--icon-arrow-right-circle: "\F134";
-	--icon-arrow-down-circle: "\F119";
-	--icon-box-arrow-up-right: "\F1C5";
-	--icon-box-seam: "\F1C7";
-	--icon-bug: "\F1DC";
-	--icon-bug-fill: "\F1DB";
-	--icon-chrome: "\F7D4";
-	--icon-clipboard2-check-fill: "\F724";
-	--icon-comments: "\F268";
-	--icon-date: "\F1F6";
-	--icon-download: "\F30A";
-	--icon-edit: "\F4CA";
-	--icon-exclamation-triangle-fill: "\F33A";
-	--icon-eyeglasses: "\F343";
-	--icon-firefox: "\F7D6";
-	--icon-flag-fill: "\F3CB";
-	--icon-github: "\F3ED";
-	--icon-globe-americas: "\F882";
-	--icon-info-lg: "\F646";
-	--icon-lightbulb-fill: "\F468";
-	--icon-link-45deg: "\F470";
-	--icon-megaphone-fill: "\F483";
-	--icon-newspaper: "\F4A3";
-	--icon-question-lg: "\F64E";
-	--icon-rss-fill: "\F521";
-	--icon-safari: "\F7D7";
-	--icon-stopwatch: "\F597";
-	--icon-star: "\F588";
-	--icon-star-fill: "\F586";
-	--icon-tags: "\F5B2";
+	--icon-font: var(--fa-font-regular), var(--fa-style-family-brands);
+
+	--icon-arrow-down-to-line: "\f33d";
+	--icon-circle-arrow-left: "\f0a8";
+	--icon-circle-arrow-right: "\f0a9";
+	--icon-bug: "\f188";
+	--icon-chrome: "\f268";
+	--icon-clipboard-check: "\f46c";
+	--icon-comment: "\f075";
+	--icon-calendar-day: "\f783";
+	--icon-pen-to-square: "\f044";
+	--icon-triangle-exclamation: "\f071";
+	--icon-firefox: "\f269";
+	--icon-flag: "\f024";
+	--icon-github: "\f09b";
+	--icon-link: "\f0c1";
+	--icon-info: "\f129";
+	--icon-lightbulb: "\f0eb";
+	--icon-newspaper: "\f1ea";
+	--icon-npm: "\f3d4";
+	--icon-question: "\3f";
+	--icon-square-rss: "\f143";
+	--icon-safari: "\f267";
+	--icon-timer: "\e29e";
+	--icon-star: "\f005";
+	--icon-tags: "\f02c";
 }
