--- a/projects/index.njk
+++ b/projects/index.njk
@@ -11,10 +11,9 @@ includes: |
 
 <p>
 Please note that this mainly contains open source tools I’ve developed, and is only a subset of my work.
-It does not contain any of <a href="/specs/">my work designing web technologies</a>,
-<a href="https://w3.org/TR/design-principles">documenting web platform design principles</a> or doing design reviews for proposed web technologies
-as a <a href="https://en.wikipedia.org/wiki/Technical_Architecture_Group">W3C TAG</a> member,
-or any of my early entrepreneurial work (2005-2011).
+It does not contain any of <a href="/specs/">my work designing and reviewing web technologies</a>,
+any of my early entrepreneurial work (2005-2011), or my work at any of my employers (except MIT).
+</p>
 
 <div mv-app="projects" class="projects" mv-source="../data/projects.json" mv-storage="https://github.com/leaverou/lea.verou.me/data/projects.json" mv-plugins="markdown">
 	<h2>[count(project)] projects ([count(type = &quot;lib&quot;)] libraries and [count(type = &quot;app&quot;)] apps)</h2>
