Update category metadata

--- a/_includes/_comments.njk
+++ b/_includes/_comments.njk
@@ -33,8 +33,8 @@
 <script src="https://giscus.app/client.js"
 		data-repo="leaverou/lea.verou.me"
 		data-repo-id="R_kgDOJdBMuA"
-		data-category="General"
-		data-category-id="DIC_kwDOJdBMuM4CliEr"
+		data-category="Blog Comments"
+		data-category-id="DIC_kwDOJdBMuM4CliEq"
 		data-mapping="og:title"
 		data-strict="1"
 		data-reactions-enabled="1"
