Fix social media post links

--- a/_includes/_posts.njk
+++ b/_includes/_posts.njk
@@ -79,7 +79,7 @@
 		   class="{{ service }}"
 		   title="{{ social[service].name }} post"
 		   style="--color: {{ social[service].color }}"
-		   target="_blank"><i class="fab-{{ social[service].icon }}"></i></a>
+		   target="_blank"><i class="fa-brands fa-{{ social[service].icon }}"></i></a>
 		{%- endif %}
 	{%- endfor -%}
 	</div>
