--- a/specs/index.njk
+++ b/specs/index.njk
@@ -14,7 +14,7 @@ Beyond listing my body of work, I’m hoping it can provide insight into the pro
 </div>
 
 <div class="note">
-	This does not incude any of my high level web architecture work as a <a href="https://en.wikipedia.org/wiki/Technical_Architecture_Group">W3C TAG</a> member,
+	This does not include any of my high level web architecture work as a <a href="https://en.wikipedia.org/wiki/Technical_Architecture_Group">W3C TAG</a> member,
 spread across two areas:
 a)&nbsp;<a href="https://github.com/w3ctag/design-reviews/">design reviews of web technology proposals</a>,
 and
