--- a/index.njk
+++ b/index.njk
@@ -3,16 +3,14 @@ title: Home
 ---
 <div class="nutshell">
 
-<img src="/about/images/lightsaber.jpg" alt="Photo of me with a lightsaber">
+<a href="/about"><img src="/about/images/lightsaber.jpg" alt="Photo of me with a lightsaber"></a>
 {% markdown %}
-**Hi, I’m Lea!** 👋🏼 I love making things that help people make things. <br>
-I work as Product Lead at [Font Awesome](https://fontawesome.com/), building the next generation of web design tools.
-Ι also [make web technologies better](/specs/),
-and launch [open source tools](/projects/) used by millions of developers.
-I've done [HCI research](/publications/#research) at [MIT](https://mit.edu), earning me a PhD
-(_yes, I also answer to Dr Verou_ 😅).
-I love sharing knowledge via [speaking](/speaking/), [teaching](https://designftw.mit.edu), and [writing](/publications/).
-Here, I [blog](/blog/) about product design, web technologies, and more.
+**Hi, I’m Lea!** 👋🏼 I make things that help folks make things.
+I’m building next generation web design tools as Product Lead at [Font Awesome](https://fontawesome.com/).
+Ι also [design web technologies](/specs/) and launch [open source dev tools](/projects/) used by millions.
+I hold a PhD from [MIT](https://mit.edu) on usability & innovation, and am open to limited [consulting](/consult/) on my areas of expertise.
+I love sharing knowledge and [speak](/speaking/), [teach](https://designftw.mit.edu), [write](/publications/),
+and [blog](/blog/) about product design, web technologies, usability, and more.
 {% endmarkdown %}
 
 <p><a class="call-to-action" href="/about/">More about me</a></p>
