--- a/index.njk
+++ b/index.njk
@@ -8,7 +8,7 @@ title: Home
 **Hi, I’m Lea!** 👋🏼 I make things that help folks make things.
 I’m building next generation web design tools as Product Lead at [Font Awesome](https://fontawesome.com/).
 Ι also [design web technologies](/specs/) and launch [open source dev tools](/projects/) used by millions.
-I hold a PhD from [MIT](https://mit.edu) on usability & innovation, and am open to limited [consulting](/consult/) on my areas of expertise.
+I hold a PhD from [MIT](https://mit.edu) on usability & innovation, and am open to limited [consulting](/consulting/) on my areas of expertise.
 I love sharing knowledge and [speak](/speaking/), [teach](https://designftw.mit.edu), [write](/publications/),
 and [blog](/blog/) about product design, web technologies, usability, and more.
 {% endmarkdown %}
