--- a/projects/index.njk
+++ b/projects/index.njk
@@ -7,13 +7,20 @@ includes: |
   <script src="https://nudeui.com/meter-discrete/meter-discrete.js" type="module"></script>
 ---
 
-<p>Ordered mostly by release date, with those with the most impact featured first.
+{% markdown %}
+I have launched dozens of open source projects over the years, many used on millions of websites.
 
-<p>
-Please note that this mainly contains open source tools I’ve developed, and is only a subset of my work.
-It does not contain any of <a href="/specs/">my work designing and reviewing web technologies</a>,
-any of my early entrepreneurial work (2005-2011), or my work at any of my employers (except MIT).
-</p>
+I design software that makes simple things easy, complex things possible, and keeps the transition between the two smooth.
+[This short talk](https://www.youtube.com/watch?v=g92XUzc1OHY&t=1s) summarizes my API design philosophy well.
+
+I want everyone who would benefit from these projects to have access to them, so my work is nearly always distributed under **permissive licenses** (typically [MIT](https://opensource.org/license/mit)).
+
+However, designing, building, and maintaining software is highly skilled, specialized work.
+If you are using my work in a for-profit project, there is a **social** expectation that you help fund its maintenance.
+[Sponsor me on GitHub](https://github.com/sponsors/LeaVerou) and be the reason we _can_ have nice things.
+This is also in **_your_ best interest**, as it makes me more likely to prioritize it.
+
+{% endmarkdown %}
 
 <div mv-app="projects" class="projects" mv-source="../data/projects.json" mv-storage="https://github.com/leaverou/lea.verou.me/data/projects.json" mv-plugins="markdown">
 	<h2>[count(project)] projects ([count(type = &quot;lib&quot;)] libraries and [count(type = &quot;app&quot;)] apps)</h2>
