--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -69,7 +69,9 @@
 	<div class="site-meta">
 		<a href="{{ page | relative }}/" class="site-logo">
 			<img property="image" src="{{ page | relative }}/mark.svg" alt="">
-			<span class="site-title" title="Life at the bleeding edge (of the Web)">Lea Verou</span>
+			<span class="site-title" title="Life at the bleeding edge (of the Web)">
+				Lea Verou<span class="phd">, PhD</span>
+			</span>
 		</a>
 		<div class="social gt-md">{% include "_social.njk" %}</div>
 		<nav class="gt-md">{{ nav.render(nav_links) }}</nav>
