--- a/assets/style.css
+++ b/assets/style.css
@@ -492,6 +492,12 @@ body > header {
 				text-transform: uppercase;
 				line-height: 1;
 				white-space: nowrap;
+
+				.phd {
+					font-size: 50%;
+					font-weight: 500;
+					text-transform: none;
+				}
 			}
 		}
 
