--- a/index.njk
+++ b/index.njk
@@ -13,7 +13,7 @@ I love sharing knowledge and [speak](/speaking/), [teach](https://designftw.mit.
 and [blog](/blog/) about product design, web technologies, usability, and more.
 {% endmarkdown %}
 
-<p><a class="call-to-action" href="/about/">More about me</a></p>
+<p><a class="cta" href="/about/">More about me</a></p>
 </div>
 
 <h2><a href="/blog/">Blog</a> <a href="/feed.xml" title="Feed" class="feed"></a></h2>
@@ -21,4 +21,4 @@ and [blog](/blog/) about product design, web technologies, usability, and more.
 {% import "_posts.njk" as posts %}
 {{ posts.list(collections.published.slice(0, 30), {style: "compact", start: collections.published.length}) }}
 
-<p><a class="call-to-action" href="/blog/page/3/">More blog posts</a></p>
+<p><a class="cta" href="/blog/page/3/">More blog posts</a></p>
