--- a/404.njk
+++ b/404.njk
@@ -15,5 +15,5 @@ let old_url = old_domain + root_relative;
 
 // Yes, I did. Bite me. 🤷🏽‍♀️
 document.write(`If it was present in the <a href="${old_url}">old website</a>,
-please <a href="{{ pkg.bugs.url }}/new?template=broken-page.yml&amp;title=Page regression: Missing page&amp;url={{ site.domain }}${ root_relative }" class="call-to-action" target="_blank">Report broken page</a>`);
+please <a href="{{ pkg.bugs.url }}/new?template=broken-page.yml&amp;title=Page regression: Missing page&amp;url={{ site.domain }}${ root_relative }" class="cta" target="_blank">Report broken page</a>`);
 </script>
